Bug 1675061 - Only reject promise if it hasn't already. r=alwu

With a GPU remote decoder, the rejection code will only run once the GPU process has been been restarted. It is possible that once this happens, that Shutdown has been called before which would have rejected any pending promise.

Differential Revision: https://phabricator.services.mozilla.com/D96757